--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,11 @@ requires-python = ">=3.13"
 dependencies = [
     "django>=5.2.1",
 ]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.11.11",
+]
+
+[tool.ruff.lint]
+extend-select = ["I", "F401"]
