--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 requires-python = ">=3.13"
 dependencies = [
     "django>=5.2.1",
+    "gunicorn>=23.0.0",
 ]
 
 [dependency-groups]
