--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "postcss ./src/static/root.css -u @tailwindcss/postcss -o ./src/static/dist/root.css -w"
+    "dev": "postcss ./src/static/root.css -u @tailwindcss/postcss -o ./src/static/dist/root.css -w",
+    "format": "prettier --write --no-error-on-unmatched-pattern ./src/**/*.{js,css}"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.7",
     "postcss": "^8.5.3",
     "postcss-cli": "^11.0.1",
+    "prettier": "^3.5.3",
     "tailwindcss": "^4.1.7"
   }
 }
