--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "cloneugc"
 version = "0.1.0"
 requires-python = ">=3.13"
 dependencies = [
+    "celery>=5.5.2",
     "django>=5.2.1",
     "gunicorn>=23.0.0",
     "whitenoise[brotli]>=6.9.0",
