Add voice cloning step

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "django>=5.2.1",
     "django-storages[s3]>=1.14.6",
     "gunicorn>=23.0.0",
+    "requests>=2.32.3",
     "whitenoise[brotli]>=6.9.0",
 ]
 
