Fuck it, graphql

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ dependencies = [
     "celery[redis]>=5.5.2",
     "django>=5.2.1",
     "django-storages[s3]>=1.14.6",
+    "graphene>=3.4.3",
+    "graphene-django>=3.2.3",
     "gunicorn>=23.0.0",
     "psycopg[binary]>=3.2.9",
     "requests>=2.32.3",
