--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev:css": "postcss ./src/static/*.css -u @tailwindcss/postcss -d ./src/static/dist -w",
-    "dev:js": "rollup -i ./src/static/*.js -p @rollup/plugin-node-resolve -d ./src/static/dist -w",
-    "build:css": "postcss ./src/static/*.css -u @tailwindcss/postcss -d ./src/static/dist",
-    "build:js": "rollup -i ./src/static/*.js -p @rollup/plugin-node-resolve -d ./src/static/dist",
-    "format": "prettier --write ./src/**/*.{js,css}"
+    "dev:css": "postcss ./static/*.css -u @tailwindcss/postcss -d ./static/dist -w",
+    "dev:js": "rollup -i ./static/*.js -p @rollup/plugin-node-resolve -d ./static/dist -w",
+    "build:css": "postcss ./static/*.css -u @tailwindcss/postcss -d ./static/dist",
+    "build:js": "rollup -i ./static/*.js -p @rollup/plugin-node-resolve -d ./static/dist",
+    "format": "prettier --write ./**/*.{js,css}"
   },
   "dependencies": {
     "media-chrome": "^4.10.0"
