--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "cloneugc"
 version = "0.1.0"
 requires-python = ">=3.13"
 dependencies = [
-    "celery[redis]>=5.5.2",
+    "celery[sqs]>=5.5.2",
     "django>=5.2.1",
     "django-storages[s3]>=1.14.6",
     "graphene>=3.4.3",
