--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -5,26 +5,22 @@ COPY package.json bun.lock ./
 RUN bun install --frozen-lockfile
 
 COPY . .
-RUN bun run build:css && bun run build:js
+RUN bun run build:css
 
 FROM python:3.13-slim
-
 COPY --from=ghcr.io/astral-sh/uv:0.7.7 /uv /uvx /bin/
-
 WORKDIR /cloneugc
 
-RUN --mount=type=cache,target=/root/.cache/uv \
-    --mount=type=bind,source=uv.lock,target=uv.lock \
-    --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
-    uv sync --locked --no-dev
+COPY pyproject.toml uv.lock ./
+RUN uv sync --locked --no-dev
 
 COPY . .
 COPY --from=build /cloneugc/static/dist/ ./static/dist/
 
+ENV UV_NO_SYNC=1
+
+RUN uv run manage.py collectstatic
+
 EXPOSE 8000
 
-RUN uv run --no-sync manage.py collectstatic --clear --noinput
-
-RUN uv run --no-sync manage.py migrate
-
-CMD ["uv", "run", "--no-sync", "gunicorn", "--workers", "3", "--bind", "0.0.0.0:8000", "--timeout", "120", "config.wsgi:application"]
+CMD ["uv", "run", "gunicorn", "--workers", "5", "--bind", "0.0.0.0:8000", "--timeout", "120", "config.wsgi:application"]
