--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -5,7 +5,7 @@ COPY package.json bun.lock ./
 RUN bun install --frozen-lockfile
 
 COPY . .
-RUN bun run build:css
+RUN bun run postcss ./static/*.css -u @tailwindcss/postcss -d ./static/dist
 
 FROM python:3.13-slim
 COPY --from=ghcr.io/astral-sh/uv:0.7.7 /uv /uvx /bin/
