Cleanup the project

--- a/site/package.json
+++ b/site/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "site",
+  "name": "cloneugc-site",
   "private": true,
-  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite dev",
