Revert "Cleanup the project"
This reverts commit 59d54172c30e6817e2552c8dc6f55b02694cc2c5.

--- a/site/package.json
+++ b/site/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "cloneugc-site",
+  "name": "site",
   "private": true,
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite dev",
