--- a/site/package.json
+++ b/site/package.json
@@ -9,6 +9,7 @@
     "fmt": "prettier --write ."
   },
   "dependencies": {
+    "media-chrome": "^4.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "vike": "^0.4.230",
