Installed boto3 separately

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,10 @@ name = "cloneugc"
 version = "0.1.0"
 requires-python = ">=3.13"
 dependencies = [
+    "boto3>=1.38.23",
     "celery[sqs]>=5.5.2",
     "django>=5.2.1",
-    "django-storages[s3]>=1.14.6",
+    "django-storages>=1.14.6",
     "graphene>=3.4.3",
     "graphene-django>=3.2.3",
     "gunicorn>=23.0.0",
