--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,10 @@ name = "cloneugc"
 version = "0.1.0"
 requires-python = ">=3.13"
 dependencies = [
+    "boto3>=1.38.24",
     "django>=5.2.1",
+    "django-storages>=1.14.6",
     "gunicorn>=23.0.0",
+    "python-dotenv>=1.1.0",
     "whitenoise[brotli]>=6.9.0",
 ]
