Add create voice clone task

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "gunicorn>=23.0.0",
     "psycopg[binary]>=3.2.9",
     "python-dotenv>=1.1.0",
+    "requests>=2.32.3",
     "whitenoise[brotli]>=6.9.0",
 ]
