--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "django>=5.2.1",
     "django-storages>=1.14.6",
     "gunicorn>=23.0.0",
+    "openai>=1.82.1",
     "psycopg[binary]>=3.2.9",
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
