Working on aruco

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,10 @@ dependencies = [
     "django>=5.2.1",
     "django-storages>=1.14.6",
     "gunicorn>=23.0.0",
+    "ipykernel>=6.29.5",
+    "numpy>=2.2.6",
     "openai>=1.82.1",
+    "opencv-python>=4.11.0.86",
     "psycopg[binary]>=3.2.9",
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
