--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,6 @@ dependencies = [
     "psycopg[binary]>=3.2.9",
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
+    "scikit-image>=0.25.2",
     "whitenoise[brotli]>=6.9.0",
 ]
