--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "opencv-python>=4.11.0.86",
     "psycopg[binary]>=3.2.9",
     "python-dotenv>=1.1.0",
+    "qrcode>=8.2",
     "requests>=2.32.3",
     "scikit-image>=0.25.2",
     "whitenoise[brotli]>=6.9.0",
