Separate  app and fix formatting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "qrcode>=8.2",
     "requests>=2.32.3",
+    "ruff>=0.11.12",
     "scikit-image>=0.25.2",
     "whitenoise[brotli]>=6.9.0",
 ]
