--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,6 @@ dependencies = [
     "scikit-image>=0.25.2",
     "whitenoise[brotli]>=6.9.0",
 ]
+
+[tool.ruff.lint]
+extend-select = ["I", "F401"]
