--- a/deploy/celery/Dockerfile
+++ b/deploy/celery/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.13-slim
 
+RUN apt update && apt install -y --no-install-recommends ffmpeg
+
 COPY --from=ghcr.io/astral-sh/uv:0.7.8 /uv /bin/
 
 WORKDIR /cloneugc
