--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,13 @@
 .DS_Store
-__pycache__/
-.venv/
-staticfiles/
-node_modules/
-infra/
+.env
 .git/
+.gitignore
+.ruff_cache/
+.venv/
+__pycache__/
 deploy/
+docker-compose.yaml
+infra/
+node_modules/
+notebooks/
+staticfiles/
