--- a/deploy/celery/Dockerfile
+++ b/deploy/celery/Dockerfile
@@ -7,9 +7,9 @@ COPY --from=ghcr.io/astral-sh/uv:0.7.8 /uv /bin/
 WORKDIR /cloneugc
 
 COPY pyproject.toml uv.lock ./
-RUN --mount=type=cache,target=/root/.cache/uv uv sync --system --frozen --no-dev --no-install-project --compile-bytecode
+RUN --mount=type=cache,target=/root/.cache/uv uv sync --frozen --no-dev --no-install-project --compile-bytecode
 
 COPY . .
-RUN --mount=type=cache,target=/root/.cache/uv uv sync --system --frozen --no-dev --no-editable --compile-bytecode
+RUN --mount=type=cache,target=/root/.cache/uv uv sync --frozen --no-dev --no-editable --compile-bytecode
 
 CMD ["uv", "run", "--no-sync", "celery", "--app=cloneugc", "worker", "--loglevel=info"]
