--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -15,11 +15,13 @@ COPY --from=ghcr.io/astral-sh/uv:0.7.8 /uv /bin/
 
 WORKDIR /cloneugc
 
+ENV UV_CACHE_DIR=/root/.cache/uv
+
 COPY pyproject.toml uv.lock ./
-RUN uv sync --frozen --no-dev --no-install-project --compile-bytecode
+RUN --mount=type=cache,target=${UV_CACHE_DIR} uv sync --frozen --no-dev --no-install-project --compile-bytecode
 
 COPY . .
-RUN uv sync --frozen --no-dev --no-editable --compile-bytecode
+RUN --mount=type=cache,target=${UV_CACHE_DIR} uv sync --frozen --no-dev --no-editable --compile-bytecode
 
 COPY --from=assets /cloneugc/static/dist ./static/dist
 
