--- a/deploy/celery/Dockerfile
+++ b/deploy/celery/Dockerfile
@@ -6,10 +6,12 @@ COPY --from=ghcr.io/astral-sh/uv:0.7.8 /uv /bin/
 
 WORKDIR /cloneugc
 
+ENV UV_CACHE_DIR=/root/.cache/uv
+
 COPY pyproject.toml uv.lock ./
-RUN --mount=type=cache,target=/root/.cache/uv uv sync --frozen --no-dev --no-install-project --compile-bytecode
+RUN --mount=type=cache,target=${UV_CACHE_DIR} uv sync --frozen --no-dev --no-install-project --compile-bytecode
 
 COPY . .
-RUN --mount=type=cache,target=/root/.cache/uv uv sync --frozen --no-dev --no-editable --compile-bytecode
+RUN --mount=type=cache,target=${UV_CACHE_DIR} uv sync --frozen --no-dev --no-editable --compile-bytecode
 
 CMD ["uv", "run", "--no-sync", "celery", "--app=cloneugc", "worker", "--loglevel=info"]
