--- a/deploy/celery/Dockerfile
+++ b/deploy/celery/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.13-slim
 
 RUN --mount=type=cache,target=/var/cache/apt \
-    apt-get update && apt-get install -y --no-install-recommends ffmpeg \
+    apt update && apt install -y --no-install-recommends ffmpeg \
     && rm -rf /var/lib/apt/lists/*
 
 COPY --from=ghcr.io/astral-sh/uv:0.7.8 /uv /bin/
