--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -34,7 +34,7 @@ jobs:
           context: .
           file: deploy/Dockerfile
           push: true
-          tags: 621753709329.dkr.ecr.us-east-1.amazonaws.com/cloneugc:sha-${{ github.sha }}
+          tags: ${{ env.ECR_REPOSITORY_URL }}:${{ github.sha }}
           cache-from: type=gha
           cache-to: "type=gha,mode=max"
           build-args: |
@@ -69,7 +69,7 @@ jobs:
           context: .
           file: deploy/celery/Dockerfile
           push: true
-          tags: 621753709329.dkr.ecr.us-east-1.amazonaws.com/cloneugc:celery-sha-${{ github.sha }}
+          tags: ${{ env.ECR_REPOSITORY_URL }}:celery-${{ github.sha }}
           cache-from: type=gha
           cache-to: "type=gha,mode=max"
           build-args: |
