--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -37,7 +37,9 @@ jobs:
           context: .
           file: deploy/Dockerfile
           push: true
-          tags: ${{ vars.ECR_REPOSITORY_URI }}:${{ steps.tag.outputs.short_sha }}
+          tags: |
+            ${{ vars.ECR_REPOSITORY_URI }}:${{ steps.tag.outputs.short_sha }}
+            ${{ vars.ECR_REPOSITORY_URI }}:latest
           cache-from: type=gha
           cache-to: "type=gha,mode=max"
           build-args: |
@@ -69,13 +71,15 @@ jobs:
       - name: Set short SHA
         id: tag
         run: echo "short_sha=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
-      - name: Build and push Celery Docker imabutge
+      - name: Build and push Celery Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
           file: deploy/celery/Dockerfile
           push: true
-          tags: ${{ vars.ECR_REPOSITORY_URI }}:celery-${{ steps.tag.outputs.short_sha }}
+          tags: |
+            ${{ vars.ECR_REPOSITORY_URI }}:celery-${{ steps.tag.outputs.short_sha }}
+            ${{ vars.ECR_REPOSITORY_URI }}:celery-latest
           cache-from: type=gha
           cache-to: "type=gha,mode=max"
           build-args: |
