--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -5,6 +5,9 @@ on:
       - main
     paths-ignore:
       - 'infra/**'
+concurrency:
+  group: build-images-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   build:
     runs-on: ubuntu-24.04
