--- a/deploy/celery/Dockerfile
+++ b/deploy/celery/Dockerfile
@@ -1,19 +1,20 @@
-FROM python:3.13
+FROM python:3.13-slim
 
-RUN --mount=type=cache,target=/var/cache/apt \
-    apt update && apt install -y --no-install-recommends ffmpeg \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt update && \
+    apt install -y ffmpeg && \
+    apt clean && \
+    rm -rf /var/lib/apt/lists/*
 
-COPY --from=ghcr.io/astral-sh/uv:0.7.8 /uv /bin/
+COPY --from=ghcr.io/astral-sh/uv:0.7.8 /uv /uvx /bin/
 
 WORKDIR /cloneugc
 
-ENV UV_CACHE_DIR=/root/.cache/uv
-
 COPY pyproject.toml uv.lock ./
-RUN --mount=type=cache,target=${UV_CACHE_DIR} uv sync --frozen --no-dev --no-install-project --compile-bytecode
+RUN uv sync --frozen --no-dev --no-install-project --compile
 
-COPY . .
-RUN --mount=type=cache,target=${UV_CACHE_DIR} uv sync --frozen --no-dev --no-editable --compile-bytecode
+COPY --chown=1000:1000 . .
+RUN uv sync --frozen --no-dev --no-editable --compile
 
-CMD ["uv", "run", "--no-sync", "celery", "--app=cloneugc", "worker", "--loglevel=info"]
+USER 1000
+
+CMD ["uv", "run", "--no-sync", "celery", "--app=cloneugc", "worker", "--loglevel=INFO"]
