--- a/cloneugc/package.json
+++ b/cloneugc/package.json
@@ -3,12 +3,14 @@
   "private": true,
   "scripts": {
     "dev": "postcss ./assets/css/base.css --use @tailwindcss/postcss --output ./assets/dist/css/base.css --watch",
-    "build": "postcss ./assets/css/base.css --use @tailwindcss/postcss --output ./assets/dist/css/base.css"
+    "build": "postcss ./assets/css/base.css --use @tailwindcss/postcss --output ./assets/dist/css/base.css",
+    "format": "prettier --write **/*.{js,css}"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.8",
     "postcss": "^8.5.4",
-    "tailwindcss": "^4.1.8",
-    "postcss-cli": "^11.0.1"
+    "postcss-cli": "^11.0.1",
+    "prettier": "^3.5.3",
+    "tailwindcss": "^4.1.8"
   }
 }
