--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,13 +6,10 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
-# Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-# amazon:
-#   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   region: us-east-1
-#   bucket: your_own_bucket-<%= Rails.env %>
+amazon_dev:
+  service: S3
+  region: eu-west-3
+  bucket: cloneugc-dev-20250605093742417300000001
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
