--- a/test/fixtures/active_storage/blobs.yml
+++ b/test/fixtures/active_storage/blobs.yml
@@ -1,2 +1,3 @@
 azamat_mp4_blob: <%= ActiveStorage::FixtureSet.blob filename: "azamat.mp4", service_name: "test_fixtures" %>
 azamat_jpg_blob: <%= ActiveStorage::FixtureSet.blob filename: "azamat.jpg", service_name: "test_fixtures" %>
+azamat_mp4_blob_s3: <%= ActiveStorage::FixtureSet.blob filename: "azamat.mp4", service_name: "amazon_dev" %>
